Fix key code shift,del and fix button reset, regex fullname vietnam

--- a/baitap1/assets/stylesheets/style.css
+++ b/baitap1/assets/stylesheets/style.css
@@ -39,7 +39,9 @@
   width: 150px;
   margin: 30px 0px -85px 250px;
 }
-
+/* .img-avt img {
+  visibility: visible;
+} */
 .img-avt p {
   margin-top: 60px;
   text-align: center;
